--- a/css/emberek.css
+++ b/css/emberek.css
@@ -5,7 +5,7 @@ body{
     background-attachment: fixed;
     background-size: cover;
     color: darkgray;
-    background-image: url(../img/forest.jpg);
+    background-image: url("forest.jpg");
 }
 
 nav{
@@ -68,8 +68,6 @@ body {
   }
   
   .card {
-    padding-top: 10px;
-    padding-bottom: 10px;
     display: flex;
     flex-direction: row;
     border: 1px solid #000;
