--- a/css/emberek.css
+++ b/css/emberek.css
@@ -5,7 +5,7 @@ body{
     background-attachment: fixed;
     background-size: cover;
     color: darkgray;
-    background-image: url("forest.jpg");
+    background-image: url(../img/forest.jpg);
 }
 
 nav{
