--- a/css/emberek.css
+++ b/css/emberek.css
@@ -5,39 +5,28 @@ body{
     background-attachment: fixed;
     background-size: cover;
     color: darkgray;
-    background-image: url(../img/forest.jpg);
+    background-image: url(../img/forest2.jpg);
 }
 
-nav{
-    padding-right: 60px;
-    margin-top: 20px;
-    font-size: x-large;
-    background-color: transparent;
-    backdrop-filter: blur(6px);
-    border: 2px solid darkgray;
-    border-radius: 10px;
-    margin-right: 10px; 
-    margin-left: 10px;
+.nav-item{
+  font-size: x-large;
+}
+.navbar-brand{
+  font-size: x-large;
+}
+.navbar{
+  background-color: seagreen;
+  text-decoration: none;
+  color: white;
+}
+.navbar:hover{
+  text-decoration: none;
+  color: white;
 }
 
-ul{
-    margin: 30px;
-    text-align: center;
-    display: inline-flex;
-}
-a{
-    font-size: xx-large;
-    position: sticky;
-    margin-left: 15px;
-    color: white;
-}
 
 p{
-    font-size: larger;
-    margin: 10px;
-    margin-right: 10px;
-    text-align: left;
-    color: white;
+  color: white;
 }
 
 h1{
