--- a/css/index.css
+++ b/css/index.css
@@ -42,3 +42,9 @@ body {
     font-weight: bold;
     font-variant: small-caps;
 }
+.hirek{
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    font-size: 400%;
+}
