--- a/css/orarend.css
+++ b/css/orarend.css
@@ -1,4 +1,3 @@
-/* Existing CSS styles */
 body{
     overflow-x: hidden;
     margin: auto;
@@ -65,3 +64,15 @@ th, td {
 .table-bordered th, .table-bordered td {
     border: 1px solid white;
 }
+.fele {
+    width: 50%;
+    
+    box-sizing: border-box;
+}
+.border-right {
+    border-right: 1px solid white; 
+}
+.container {
+    max-width: 1800px;
+}
+
