--- a/css/index.css
+++ b/css/index.css
@@ -48,3 +48,16 @@ body {
     font-weight: bold;
     font-size: 400%;
 }
+thead{
+    font-weight: bold;
+}
+th, td {
+    text-align: center;
+    vertical-align: middle !important;
+}
+button{
+    background-color: green;
+    border-color: white;
+    font-weight: bold;
+    border-radius: 5px;
+}
