--- a/css/sötétórarend.css
+++ b/css/sötétórarend.css
@@ -79,3 +79,41 @@ button{
     color: rgb(66, 66, 66);
     font-size: 120%;
 }
+.kepkozep {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px; 
+    padding: 20px;
+}
+
+.kep {
+    text-align: center;
+    padding: 20px;
+    background-color: rgb(56, 56, 56); 
+    border: 10px solid rgb(134, 134, 134);
+    outline: 5px solid rgb(207, 207, 207); 
+    display: inline-block;
+}
+
+.kepkep {
+    width: 200px;
+    height: 200px;
+    border: 5px solid rgb(56, 56, 56); 
+    object-fit: cover;
+    display: block;
+    margin: 0 auto;
+}
+
+.kepnev {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.kepleiras {
+    font-size: 16px;
+    color: #555;
+    margin-top: 5px;
+}
